# Stata-AI-Skill

./: .gitignore  Cargo.toml  LICENSE  README.md  skills.sh.json
guide/: installation.md
skill/: SKILL.md
skills/stata-ai-skill/: SKILL.md
skills/stata-ai-skill/stata/aiskill/: aiskill.pkg  aiskill.sthlp
skills/stata-all-in-one-skill/: SKILL.md
src/: main.rs
stata/aiskill/: aiskill.ado
xtask/: Cargo.toml
xtask/src/: main.rs
