[workspace]
members = [".", "xtask"]
resolver = "2"

[package]
name = "stata-ai-skill"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native localhost HTTP service for AI agents to run Stata code"

[[bin]]
name = "stata-ai-skill"
path = "src/main.rs"

[dependencies]

[profile.release]
codegen-units = 1
lto = true
strip = true
