[workspace]
members = [".", "xtask"]
resolver = "2"

[package]
name = "stata-ai-skill"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Native localhost HTTP service for AI agents to run Stata code"

[[bin]]
name = "stata-ai-skill"
path = "src/main.rs"

[dependencies]
encoding_rs = "0.8"
getrandom = "0.3"
image = { version = "=0.25.9", default-features = false, features = ["png", "jpeg"] }
resvg = "0.47.0"
serde_json = "1"
tiny-skia = "0.12.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
